--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>My First Page</title>
 </head>
 <body>
-  <h1>Hello, Bhumika!</h1>
-  <p>This is your first HTML file.</p>
+  <h1>Hello, World!</h1>
+  <p>This is my first HTML file.</p>
   <p> Let's get started.</p>
 </body>
 </html>
